<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".frag_formulario">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView3" android:textStyle="bold"
                android:textAlignment="center"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/Rut"
                    android:layout_width="186dp"
                    android:layout_height="17dp" android:id="@+id/textView4" android:layout_weight="1"/>
            <EditText
                    android:layout_width="158dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/txtRut" android:layout_weight="1" android:hint="@string/IngreseRut"/>
            <TextView
                    android:text="@string/raya"
                    android:layout_width="44dp"
                    android:layout_height="wrap_content" android:id="@+id/textView5" android:layout_weight="1"
                    android:textStyle="bold"/>
            <EditText
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtDv" android:layout_weight="1" android:hint="@string/DV"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/Nombre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:layout_weight="1"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/txtNombre" android:layout_weight="1" android:hint="@string/IngreseNombre"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/fecha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/btnFecha" android:layout_weight="1"/>
            <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txtFechaIngreso" android:layout_weight="1"/>
        </LinearLayout>
        <Button
                android:text="@string/Agregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/btnAgregar"/>
    </LinearLayout>
</FrameLayout>