<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_agregar"
                android:icon="@android:drawable/ic_menu_add"
                android:title="@string/agregarPersona"/>
        <item
                android:id="@+id/nav_ver"
                android:icon="@android:drawable/ic_dialog_dialer"
                android:title="@string/listar"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                    android:id="@+id/nav_salir"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/salir"/>
        </menu>
    </item>

</menu>
